<resources>
    <string name="app_name">Handy Shop</string>
    <string name="hello_world">helloWorld</string>

    <string name="facebook_app_id">280901888910378</string>

    <string name="profile_name">Leonardo</string>

    <string name="title_insert">Title</string>
    <string name="description_insert">Description</string>
    <string name="category_sub_insert">Category</string>
    <string name="subcategory_insert">Subcategory</string>
    <string name="category_prompt">Choose a category</string>
    <string name="subcategory_prompt">Choose a subcategory</string>

    <string name="title_filter">Filter by Category</string>


    <string name="offer_expandable">Offers around you</string>
    <string name="request_expandable">Requests around you</string>

    <string name="request_type">Offer</string>
    <string name="type_insert">Type to insert</string>
    <string name="offer_type">Request</string>
    <string name="seekbar_string_offer">Choice Distance Range</string>
    <string name="seekbar_string_request">Choice Distance Range</string>

    <string name="leaveFeedback">Leave a Feedback</string>
     <string name="title_req_feedback">Title</string>
     <string name="description_request_feedback">Description</string>
    <string name="category_feedback">Category</string>
    <string name="subcategory_feedback">Sub Category</string>
    <string name="username_feedback">User</string>

    <string-array name="category_arrays">
        <item>Rentals</item>
        <item>Tools</item>
        <item>Services</item>
    </string-array>

    <string-array name="category_arrays_filter">
        <item>All</item>
        <item>Rentals</item>
        <item>Tools</item>
        <item>Services</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>
