<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="fill_vertical"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_filter"
        android:id="@+id/filter_title"
        android:layout_weight="0.03"
        android:textStyle="bold"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/category_choice_filter"
        android:layout_weight="0.03"
        android:spinnerMode="dropdown"
        android:prompt="@string/category_prompt"
        android:entries="@array/category_arrays_filter"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/seekbar_string_offer"
        android:id="@+id/seekbar_title_offer"
        android:layout_weight="0.03"
        android:textStyle="bold"/>

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar_offer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/offer_expandable"
        android:id="@+id/expandable_title_offer"
        android:layout_weight="0.03"
        android:textStyle="bold"/>

    <ExpandableListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="374dp"
        android:groupIndicator="@null">
    </ExpandableListView>



</LinearLayout>


