<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:paddingTop="2dp"
    android:paddingBottom="2dp"
    android:id="@+id/req"
    tools:context=".MainActivity">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_filter"
        android:id="@+id/filter_title"
        android:layout_weight="0.03"
        android:textStyle="bold"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/category_choice_filter_request"
        android:layout_weight="0.03"
        android:spinnerMode="dropdown"
        android:prompt="@string/category_prompt"
        android:entries="@array/category_arrays_filter"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/seekbar_string_request"
        android:id="@+id/seekbar_title_request"
        android:layout_weight="0.03"
        android:textStyle="bold"/>

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar_request" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/request_expandable"
        android:id="@+id/expandable_title_request"
        android:layout_weight="0.03"
        android:textStyle="bold"/>


    <ExpandableListView
        android:id="@+id/listView"
        android:layout_height="375dp"
        android:layout_width="match_parent"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp" />

</RelativeLayout>

