<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayoutInsert"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="0"
    android:background="@drawable/insert"
    android:nestedScrollingEnabled="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leaveFeedback"
        android:id="@+id/type_insert"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="@color/md_black_1000"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_feedback"
        android:textStyle="bold"
        android:textColor="@color/md_black_1000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_feedback_content"
        android:text="UTENTE"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_req_feedback"
        android:id="@+id/title_request_feedback"
        android:textStyle="bold"
        android:textColor="@color/md_black_1000"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_feedback_content"
            android:text="TITOLO"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_request_feedback"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:textColor="@color/md_black_1000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description_feedback_content"
        android:text="DESCRIZIONE"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_feedback"
        android:id="@+id/editText3"
        android:textStyle="bold"
        android:textColor="@color/md_black_1000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/category_feedback_content"
        android:text="CATEGORIA"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subcategory_feedback"
        android:id="@+id/subcategory_feedback_title"
        android:textColor="@color/md_black_1000"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subcategory_feedback_content"
        android:text="SOTTOCATEGORIA"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:layout_alignParentBottom="true">


        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Leave Feedback"
            android:id="@+id/leaveFeedback"
            android:onClick="leaveFeedback"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp">
        </Button>

    </LinearLayout>
</LinearLayout>
